// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      Search
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
    <div
      className="table"
    >
      <div
        className="table-row"
      >
        <div
          style={
            Object {
              "width": "40%",
            }
          }
        >
          Title
        </div>
        <div
          style={
            Object {
              "marginLeft": "-12px",
              "width": "30%",
            }
          }
        >
          Author
        </div>
        <div
          style={
            Object {
              "width": "10%",
            }
          }
        >
          Comments
        </div>
        <div
          style={
            Object {
              "width": "10%",
            }
          }
        >
          Points
        </div>
      </div>
    </div>
    <div
      className="interactions"
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Next Page
      </button>
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
  onClick={undefined}
  type="button"
>
  Button
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  onSubmit={undefined}
>
  Search
  <input
    onChange={undefined}
    type="text"
    value={undefined}
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-row"
  >
    <div
      style={
        Object {
          "width": "40%",
        }
      }
    >
      Title
    </div>
    <div
      style={
        Object {
          "marginLeft": "-12px",
          "width": "30%",
        }
      }
    >
      Author
    </div>
    <div
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Comments
    </div>
    <div
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Points
    </div>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
      >
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
      >
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
